metadata/force-app/main/default/objects/Sales_KPI_Conditions__mdt/Sales_KPI_Conditions__mdt.object-meta.xml
<CustomObject>
    <label>Sales KPI Conditions</label>
    <pluralLabel>Sales KPI Conditions</pluralLabel>
</CustomObject>