metadata/force-app/main/default/objects/Sales_KPI_Conditions__mdt/fields/ARR_Movement_Field__c.field-meta.xml
<CustomField>
    <fullName>ARR_Movement_Field__c</fullName>
    <inlineHelpText>Select the ARR movement field whose value has to be included as amount in the Opportunity ARR Movement records.</inlineHelpText>
    <label>ARR Movement Field</label>
    <metadataRelationshipControllingField>Sales_KPI_Conditions__mdt.Parent_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Sales_KPI_Conditions5</relationshipLabel>
    <relationshipName>Sales_KPI_Conditions5</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>