metadata/force-app/main/default/objects/Sales_KPI_Conditions__mdt/fields/Criteria_logical_operator__c.field-meta.xml
<CustomField>
    <fullName>Criteria_logical_operator__c</fullName>
    <inlineHelpText>Select the logical operator for comparing the selected dates on opportunity.</inlineHelpText>
    <label>Criteria logical operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&gt;</fullName>
                <default>true</default>
                <label>&gt;</label>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>