metadata/force-app/main/default/objects/Sales_KPI_Conditions__mdt/fields/Movement_Field__c.field-meta.xml
<CustomField>
    <fullName>Movement_Field__c</fullName>
    <inlineHelpText>Select the MRR movement field on whose change the Opportunity ARR movement has to be created or updated.</inlineHelpText>
    <label>Movement Field</label>
    <metadataRelationshipControllingField>Sales_KPI_Conditions__mdt.Parent_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Sales_KPI_Conditions</relationshipLabel>
    <relationshipName>Sales_KPI_Conditions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>