metadata/force-app/main/default/objects/Sales_KPI_Conditions__mdt/fields/Movement_Type__c.field-meta.xml
<CustomField>
    <fullName>Movement_Type__c</fullName>
    <inlineHelpText>Select the movement type</inlineHelpText>
    <label>Movement Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Churn</fullName>
                <default>true</default>
                <label>Churn</label>
            </value>
            <value>
                <fullName>Churn: Platform Transfer</fullName>
            </value>
            <value>
                <fullName>Contraction</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Internal Transfer</fullName>
            </value>
            <value>
                <fullName>New ARR</fullName>
            </value>
            <value>
                <fullName>New ARR: OEM</fullName>
            </value>
            <value>
                <fullName>New ARR: Platform Transfer</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Renewal Uplift</fullName>
            </value>
            <value>
                <fullName>Indexation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>