metadata/force-app/main/default/objects/Sales_KPI_Conditions__mdt/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <inlineHelpText>Add different types of the opportunity applicable for the movements separated by semicolon.</inlineHelpText>
    <label>Opportunity Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>