metadata/force-app/main/default/objects/Sales_KPI_Conditions__mdt/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <inlineHelpText>Select object related to sales KPI conditions (Opportunity)</inlineHelpText>
    <label>Parent Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Sales_KPI_Conditions</relationshipLabel>
    <relationshipName>Sales_KPI_Conditions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>