metadata/force-app/main/default/objects/Sales_KPI_Conditions__mdt/fields/Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Date__c</fullName>
    <inlineHelpText>Select the date field on opportunity which should be added as reporting date on Opportunity ARR movements.</inlineHelpText>
    <label>Reporting Date</label>
    <metadataRelationshipControllingField>Sales_KPI_Conditions__mdt.Parent_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Sales_KPI_Conditions1</relationshipLabel>
    <relationshipName>Sales_KPI_Conditions1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>