metadata/force-app/main/default/objects/Sales_KPI_Conditions__mdt/fields/Reporting_Date_Criteria_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Date_Criteria_Field_2__c</fullName>
    <inlineHelpText>Select the date field to be compared for adding reporting date on Opportunity ARR Movement records.</inlineHelpText>
    <label>Reporting Date Criteria Field 2</label>
    <metadataRelationshipControllingField>Sales_KPI_Conditions__mdt.Parent_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Sales_KPI_Conditions3</relationshipLabel>
    <relationshipName>Sales_KPI_Conditions3</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>