metadata/force-app/main/default/objects/Sales_KPI_Conditions__mdt/fields/Reporting_Date_to_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Date_to_Close_Date__c</fullName>
    <inlineHelpText>Select the field on opportunity used to update close date as reporting date.</inlineHelpText>
    <label>Reporting Date to Close Date</label>
    <metadataRelationshipControllingField>Sales_KPI_Conditions__mdt.Parent_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Sales_KPI_Conditions4</relationshipLabel>
    <relationshipName>Sales_KPI_Conditions4</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>